Disable cpp plugin in pytest because it was causing all tests to hang. Not sure why this happened, maybe something in my environment changed, but it works without this plugin

--- a/pytest.ini
+++ b/pytest.ini
@@ -12,6 +12,8 @@ addopts =
     -p no:pytest-shard
     # don't rewrite assertions (usually not a problem in CI due to differences in imports, see #95844)
     --assert=plain
+    # Disable problematic cpp plugin that causes hanging
+    -p no:cpp
 testpaths =
     test
 junit_logging_reruns = all
